DeveloperOrg/src/objects/Skill__c.object
<CustomObject>
    <description>A skill held by a consultant that can be measured, or required for a project</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category that this skill belongs to</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Languages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional detail to back up the rating</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>On a scale of 0 (none) to 5 (expert), proficiency of associated Resource in this skill</description>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0 - None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Above Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Name of the skill</description>
        <label>Type</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Amazon Web Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUI Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Skill</label>
    <nameField>
        <displayFormat>Skill-{00000}</displayFormat>
        <label>Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Type</fullName>
        <active>true</active>
        <description>Skill Type must not be empty</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;&apos;)</errorConditionFormula>
        <errorMessage>Type must contain a value</errorMessage>
    </validationRules>
</CustomObject>